* Fixed race conditions in the server's bitmap/picture handling: the objects   are now removed from the maps as soon as the client deletes them. This also   makes the "client reference" mechanism superfluous I introduced earlier. * ServerApp::SetCurrentCursor() must always call Desktop::SetCursor(), since it   is also called whenever the current application changes. This fixes the cursor   almost never changing. * Renamed ServerPicture::Usurp()/StepDown() to PushPicture(), and PopPicture(). * Also, they now acquire a reference to the picture in question (ie. the picture   you get from PopPicture() also owns a reference you need to free). * ServerApp::CreatePicture() may fail, too. This case is now handled in the code   that calls it. * Previously, the ServerWindow tried to process up to 70 messages in one go.   That obviously caused bug #4709. Now, we have the additional requirement to   not hold the desktop lock for longer than 25 ms. I haven't tested it with   Kaleidoscope yet, though.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35472 a95241bf-73f2-0310-859d-f6bbb57e9c96